--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "avdworld.Stratis"]
 	path = avdworld.Stratis
-	url = ../../Documents/Arma 3 Alpha - Other Profiles/[AvD]%20Rush/missions/avdworld.Stratis
+	url = git@github.com:avdclan/avdworld.Stratis
